# adifgen

./: README.md
backend/: Cargo.toml
backend/src/: adifgen.rs  main.rs  strconv.rs
backend/static/: index.html
frontend/adifgen/: package-lock.json  package.json
