[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7.4", features = ["multipart"] }
axum_typed_multipart = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
csv = "1.3"
chrono = "0.4"
encoding_rs = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
